Ensure <p> spacing is consistent on the archive page with how it appears in pages based on the blocks dashboard

--- a/public/css/archive.css
+++ b/public/css/archive.css
@@ -47,6 +47,10 @@
   display: block;
 }
 
+.block-content p {
+  margin: 5px 0;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
